--- a/react-leave-system/package.json
+++ b/react-leave-system/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.20.0",
     "bootstrap": "^5.3.3",
     "next": "14.2.14",
     "react": "^18",
