--- a/react-leave-system/package.json
+++ b/react-leave-system/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@tabler/icons-react": "^3.20.0",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "knex": "^3.1.0",
     "next": "14.2.14",
+    "pg": "^8.13.1",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
