--- a/react-leave-system/package.json
+++ b/react-leave-system/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.20.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "iron-session": "^8.0.3",
     "knex": "^3.1.0",
     "next": "14.2.14",
     "pg": "^8.13.1",
