--- a/react-leave-system/package.json
+++ b/react-leave-system/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
