--- a/react-leave-system/package.json
+++ b/react-leave-system/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "sass": "^1.82.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
